--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ base {
 }
 
 repositories {
+    maven {
+        url = "https://maven.terraformersmc.com/releases/"
+    }
 }
 
 loom {
@@ -39,6 +42,8 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-language-kotlin:${project.fabric_kotlin_version}"
     // https://mvnrepository.com/artifact/org.yaml/snakeyaml
     implementation 'org.yaml:snakeyaml:2.5'
+    include('org.yaml:snakeyaml:2.5')
+    modImplementation include("com.terraformersmc:modmenu:${project.modmenu}")
 }
 
 processResources {
