--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.10
-yarn_mappings=1.21.10+build.2
-loader_version=0.17.3
+yarn_mappings=1.21.10+build.3
+loader_version=0.18.1
 fabric_kotlin_version=1.13.7+kotlin.2.2.21
 
 # Mod Properties
@@ -19,4 +19,5 @@ maven_group=chickenmanfy.scify
 archives_base_name=scify
 
 # Dependencies
-fabric_version=0.136.0+1.21.10
+fabric_version=0.138.3+1.21.10
+modmenu=16.0.0-rc.1
